<resources>
    <string name="app_name">Sahayak</string>
    <string name="web_client_id">757457065095-tu9nm20ug5lb8c3eahqj58a9ah4pn30u.apps.googleusercontent.com</string>

    <!--Login Activity-->
    <string name="blind">Blind</string>
    <string name="volunteers">Volunteers</string>
    <string name="help">I need visual assistance</string>
    <string name="helper">I would like to Volunteer</string>
    <string name="quote">Join a global support community.See the world together</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_login">Google Login</string>

    <!--Main Activity-->
    <string name="ask_help">Call first available volunteer</string>
    <string name="message">You will receive a notification when someone needs your help</string>
    <string name="learn_how_to_answer_call">Learn how to answer a call</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_content">This app is designed for blind people who are in need assistance.
    Volunteers nearby the blind can help them regarding their problem.</string>
    <string name="share">Share</string>
    <string name="share_content">Let the world know about this wonderful app.</string>

    <!--Email Intent-->
    <string name="email_address">Rishikgupta8@gmail.com</string>

    <!--Alert Dialog-->
    <string name="alert_title">Logout</string>
    <string name="alert_message">Are you sure, you would like to logout?</string>
</resources>