<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_large"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/blind_people"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="982733"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_large"
        android:textSize="@dimen/count_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/blind"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/blind"
        android:textSize="@dimen/text_size"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/volunteers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blind_people" />

    <TextView
        android:id="@+id/volunteers_people"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/margin_large"
        android:text="31946109"
        android:textSize="@dimen/count_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

        <TextView
        android:id="@+id/volunteers"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/volunteers"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/volunteers_people"
        app:layout_constraintStart_toStartOf="@+id/volunteers_people"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/blind"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_italic"
        android:gravity="center_horizontal"
        android:text="@string/quote"
        android:textSize="@dimen/count_size"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="sans-serif-black"
        android:text="@string/help"
        app:cornerRadius="@dimen/round_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote" />

    <Button
        android:id="@+id/helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-serif-black"
        android:text="@string/helper"
        app:cornerRadius="@dimen/round_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

</androidx.constraintlayout.widget.ConstraintLayout>