<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.login.WelcomeFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/blind_people"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="982733"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_large"
        android:textSize="@dimen/count_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/blind"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/blind"
        android:textSize="@dimen/text_size"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/volunteers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blind_people" />

    <TextView
        android:id="@+id/volunteers_people"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_large"
        android:text="31946109"
        android:textSize="@dimen/count_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/volunteers"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/volunteers"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/volunteers_people"
        app:layout_constraintStart_toStartOf="@+id/volunteers_people"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        android:background="#d3d3d3"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_extra"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_italic"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/quote"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/blind_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/roboto_bold_italic"
                android:text="@string/help"
                app:cornerRadius="@dimen/round_btn" />

            <Button
                android:id="@+id/volunteer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/roboto_bold_italic"
                android:backgroundTint="@color/black"
                android:text="@string/helper"
                app:cornerRadius="@dimen/round_btn" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>