<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large">

        <Button
            android:id="@+id/help_call"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/roboto"
            android:text="@string/ask_help"
            android:textSize="50sp"
            android:visibility="gone"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="30dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView_volunteer"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:importantForAccessibility="no"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:id="@+id/userCountLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView_volunteer"
                    android:layout_marginTop="@dimen/margin_large"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textSize="@dimen/count_size"
                        tools:text="429853" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textSize="@dimen/count_size"
                        tools:text="425554" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userCountLayout"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:text="@string/blind"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:text="@string/volunteers"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:elevation="30dp"
            android:visibility="gone"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv1"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_large"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="@dimen/count_size"
                    tools:text="User name" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/text_size"
                    tools:text="English" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra"
            android:elevation="30dp"
            android:visibility="gone"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv2"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/margin_large"
            android:text="@string/learn_how_to_answer_call"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            app:cornerRadius="@dimen/round_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv3"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>