<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large"
    tools:context="ui.login.WelcomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_volunteer"
                android:layout_width="120dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/count_size"
                android:textColor="@color/black"
                android:text="429853"
                android:layout_marginStart="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/count_size"
                android:textColor="@color/black"
                android:text="425554"
                android:layout_marginStart="80dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:text="@string/blind"
                android:layout_marginStart="65dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                android:text="@string/volunteers"
                android:layout_marginStart="95dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="30dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/roboto_bold_italic"
                android:text="User name"
                android:textSize="@dimen/count_size"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center"
                android:text="English"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="30dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="@dimen/margin_extra"
        app:layout_constraintTop_toBottomOf="@id/cv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold_italic"
            android:padding="@dimen/margin_small"
            android:text="@string/message"
            android:textSize="@dimen/text_size" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra"
        android:text="@string/learn_how_to_answer_call"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/roboto_bold_italic"
        android:backgroundTint="@color/black"
        app:cornerRadius="@dimen/round_btn"
        android:padding="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv3" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>